Archive2/3a/de7b2f198fad42/output
In file included from /usr/local/include/c++/4.9.2/bits/stl_algobase.h:67:0,
                 from /usr/local/include/c++/4.9.2/bits/char_traits.h:39,
                 from /usr/local/include/c++/4.9.2/string:40,
                 from main.cpp:1:
/usr/local/include/c++/4.9.2/bits/stl_iterator.h: In instantiation of 'std::move_iterator<_Iterator>::value_type&& std::move_iterator<_Iterator>::operator*() const [with _Iterator = std::_Rb_tree_const_iterator<std::basic_string<char> >; std::move_iterator<_Iterator>::reference = std::basic_string<char>&&; std::move_iterator<_Iterator>::value_type = std::basic_string<char>]':
/usr/local/include/c++/4.9.2/bits/stl_uninitialized.h:75:45:   required from 'static _ForwardIterator std::__uninitialized_copy<_TrivialValueTypes>::__uninit_copy(_InputIterator, _InputIterator, _ForwardIterator) [with _InputIterator = std::move_iterator<std::_Rb_tree_const_iterator<std::basic_string<char> > >; _ForwardIterator = std::basic_string<char>*; bool _TrivialValueTypes = false]'
/usr/local/include/c++/4.9.2/bits/stl_uninitialized.h:125:41:   required from '_ForwardIterator std::uninitialized_copy(_InputIterator, _InputIterator, _ForwardIterator) [with _InputIterator = std::move_iterator<std::_Rb_tree_const_iterator<std::basic_string<char> > >; _ForwardIterator = std::basic_string<char>*]'
/usr/local/include/c++/4.9.2/bits/stl_uninitialized.h:278:63:   required from '_ForwardIterator std::__uninitialized_copy_a(_InputIterator, _InputIterator, _ForwardIterator, std::allocator<_Tp>&) [with _InputIterator = std::move_iterator<std::_Rb_tree_const_iterator<std::basic_string<char> > >; _ForwardIterator = std::basic_string<char>*; _Tp = std::basic_string<char>]'
/usr/local/include/c++/4.9.2/bits/stl_vector.h:1292:27:   required from 'void std::vector<_Tp, _Alloc>::_M_range_initialize(_ForwardIterator, _ForwardIterator, std::forward_iterator_tag) [with _ForwardIterator = std::move_iterator<std::_Rb_tree_const_iterator<std::basic_string<char> > >; _Tp = std::basic_string<char>; _Alloc = std::allocator<std::basic_string<char> >]'
/usr/local/include/c++/4.9.2/bits/stl_vector.h:1263:56:   required from 'void std::vector<_Tp, _Alloc>::_M_initialize_dispatch(_InputIterator, _InputIterator, std::__false_type) [with _InputIterator = std::move_iterator<std::_Rb_tree_const_iterator<std::basic_string<char> > >; _Tp = std::basic_string<char>; _Alloc = std::allocator<std::basic_string<char> >]'
/usr/local/include/c++/4.9.2/bits/stl_vector.h:404:65:   required from 'std::vector<_Tp, _Alloc>::vector(_InputIterator, _InputIterator, const allocator_type&) [with _InputIterator = std::move_iterator<std::_Rb_tree_const_iterator<std::basic_string<char> > >; <template-parameter-2-2> = void; _Tp = std::basic_string<char>; _Alloc = std::allocator<std::basic_string<char> >; std::vector<_Tp, _Alloc>::allocator_type = std::allocator<std::basic_string<char> >]'
main.cpp:31:87:   required from here
/usr/local/include/c++/4.9.2/bits/stl_iterator.h:980:37: error: invalid initialization of reference of type 'std::move_iterator<std::_Rb_tree_const_iterator<std::basic_string<char> > >::reference {aka std::basic_string<char>&&}' from expression of type 'std::remove_reference<const std::basic_string<char>&>::type {aka const std::basic_string<char>}'
       { return std::move(*_M_current); }
                                     ^
